# remake_proj

remake_project/: CMakeLists.txt
remake_project/project/: CMakeLists.txt
remake_project/project/Packt_CreatingGamesWithAI/: Includes.h
remake_project/project/Packt_CreatingGamesWithAI/Application/: Application.hpp  ApplicationManager.cpp
remake_project/project/Packt_CreatingGamesWithAI/BaseGamingAssests/: IGameObject.hpp
remake_project/project/Packt_CreatingGamesWithAI/Basics/: Commons.cpp
remake_project/project/Packt_CreatingGamesWithAI/Basics/Collision/: Collider.hpp
remake_project/project/Packt_CreatingGamesWithAI/Basics/Helpers/: TextureLoader.cpp
remake_project/project/Packt_CreatingGamesWithAI/Basics/Observer/: Subject.hpp
remake_project/project/Packt_CreatingGamesWithAI/BattleCity/: BattleCityGame.cpp  BattleCityGameWorld.cpp
remake_project/project/Packt_CreatingGamesWithAI/BattleCity/GameObjects/: ExplosionAnimation.cpp  Wall.cpp
remake_project/project/Packt_CreatingGamesWithAI/BattleCity/GameObjects/TankRelatedGameObjects/: Tank.cpp  TankCharacter.hpp  TankMissile.cpp
remake_project/project/Packt_CreatingGamesWithAI/BattleCity/TankAI/: TankAI.cpp
remake_project/project/Packt_CreatingGamesWithAI/PackmanLikeGame/PLG_GameObjects/PLG_CharacterControllers/: PLG_Player.cpp
remake_project/project/Packt_CreatingGamesWithAI/PackmanLikeGame/PLG_GameObjects/PLG_CharacterControllers/AI/: PLG_EnemyAi.cpp
remake_project/project/Packt_CreatingGamesWithAI/Rendering/: ApplicationWindow.hpp  Renderer.cpp
remake_project/project/Packt_CreatingGamesWithAI/Rendering/TextureRelated/: TextureManager.cpp
remake_project/project/Packt_CreatingGamesWithAI/TictacToeGame/: TicTacToeGame.cpp  TicTacToeGameModel.hpp
remake_project/tests/: CMakeLists.txt
remake_project/tests/tests/: CMakeLists.txt  tests.cpp
